macros/tests/trybuild/static.rs
use serde_args_macros::help;

#[help]
static FOO: usize = 0;

fn main() {}
